# python-project-template

./: README.md  pyproject.toml  setup.py
src/main/: main.py
tests/: main_tests.py
